<resources>
    <string name="google_maps_key_android" translatable="false">AIzaSyD33YuNQihec0Ij1ahb3i85D94TpHQIyQQ</string>
    <string name="google_maps_key_server" translatable="false">AIzaSyAka7938TYm134FXKF1f3URUcO0lep-cbU</string>
    <string name="google_maps_key" translatable="false">&amp;key=</string>
    <string name="google_maps_address" translatable="false">https://maps.googleapis.com/maps/api/geocode/json?address=</string>
    <string name="google_maps_latlng" translatable="false">https://maps.googleapis.com/maps/api/geocode/json?latlng=</string>

    <string name="app_name">Music+=1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_music">Music</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_map">Map</string>
    <string name="menu_about_program">About</string>
    <string name="menu_exit">Exit</string>
</resources>
